[project]
name = "modern-python-project-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pre-commit>=4.4.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "rich>=14.2.0",
    "ruff>=0.14.4",
]
